# google-suite-task-manager

./: .flaskenv  .gitignore  LICENSE  README.md  config.py  mypy.ini  py.typed  pyproject.toml  read me usage and contibution  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
app/: __init__.py  client_secret.json  database.py  forms.py  main.py  routes.py
app/hw1/: calculator.py
app/templates/: base.html  index.html  protected_area.html  signin.html
code/: main.py
code/Templates/: protected_area.html  signin.html
src/app/: __init__.py
src/app/templates/: protected_area.html
src/backend/: database.py
src/hw1/: calculator.py
tests/: test_1.py  test_tasks.py
