[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jimmy Shong", email = "jimmysh341@gmail.com"},
]
dependencies = [
    "pytest>=8.0.0",
    "flask>=3.0.3",
    "requests>=2.31.0",
    "google>=3.0.0",
    "google-api-python-client>=2.128.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.1",
    "types-requests>=2.31.0.20240406",
    "google-auth-stubs>=0.2.0",
    "google-api-python-client-stubs>=1.25.0",
    "types-colorama>=0.4.15.20240311",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "types-Pygments>=2.18.0.20240506",
    "types-setuptools>=69.5.0.20240423",
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pathlib>=1.0.1",
    "typing>=3.7.4.3",
    "pymongo>=4.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
# Never enforce `E501` (line length violations).
lint.ignore = ["C901", "E501", "E741", "F402", "F823" ]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
